# Kyiv_Busineses

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kyiv_business/: .env_example  consts.py  manage.py
kyiv_business/kyiv_business/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
kyiv_business/main/: admin.py  forms.py  models.py  urls.py  utils.py
kyiv_business/main/templates/: about.html  activity_companies.html  base.html  categories.html  companies.html  company.html  home.html  login.html  registration.html
kyiv_business/main/views/: __init__.py  activity.py  all_companies.py  categories.py  company.py  home.py  login.py  registration.py
kyiv_business/static/css/: styles.css
